--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html lang="es-AR">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Descubre los mejores productos en Group Four Ecommerce. Ofertas exclusivas y envíos a todo el país. ¡Compra ahora!" />
+  <meta name="keywords" content="ecommerce, tienda online, ofertas, descuentos, moda, tecnología" />
+  <meta name="author" content="Group Four Ecommerce" />
+  <meta name="robots" content="index, follow" />
+  <link rel="shortcut icon" type="image/x-icon" href="/public/logo-ecommerce.png" />
+  <title>Group Four Ecommerce | Tu Tienda Online</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
